Fix Table Visibility onload of track.html

--- a/static/assets/css/upload.css
+++ b/static/assets/css/upload.css
@@ -85,10 +85,11 @@ margin-top: 15px;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width:165%;
+    width:
 }
 
 #foodimage{
     max-height: 30vh;
-    max-width: 30vw;
+    width: 100%;
+    margin:auto;
 }
